# smoke_tracker

./: .gitignore  README.md  pyproject.toml
scripts/: folder_tree.py
src/smoke_tracker/: add_smoking_details.py  cli.py  datewise_details.py  db_utils.py  folder_tree.py  main.py  monthwise_details.py
