[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smoke-tracker"  # Choose a unique name!
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
description = "A CLI tool to track smoking habits."
readme = "README.md"
requires-python = ">=3.8"  # Adjust if needed
license = { file = "LICENSE" }
dependencies = [
    "typer",
    "rich"    
]

[project.scripts]
smoke-tracker = "smoke_tracker.main:main"